fix: overflow in card component

--- a/PlataformaPush/src/app/shared/card/card.component.css
+++ b/PlataformaPush/src/app/shared/card/card.component.css
@@ -26,5 +26,7 @@
   width: 320px;
   height: 80px;
   word-wrap: break-word;
+  
+  overflow:auto;
 }
 
